<resources>
    <string name="app_name">AgentD</string>
    <string name="main_title">Agent D</string>
    <string name="user_button">User</string>
    <string name="create_button">Create</string>
    <string name="missions_title">Missions</string>
    <string name="hello">Hello</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_signup_to_signin">Back to login</string>
    <string name="prompt_signin_to_signup">Create an account</string>
    <string name="prompt_phone_number">Phone number</string>

    <string name="latitude_prefix">Latitude: %s</string>
    <string name="longitude_prefix">Latitude: %s</string>
    <string name="title_to_user">User</string>
    <string name="title_to_form">Create</string>
    <string name="title_to_detail">Detail</string>
    <string name="user_username">Username</string>
    <string name="user_email">Email</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_balance">Balance (won)</string>
    <string name="user_latitude">Latitude</string>
    <string name="user_longitude">Longitude</string>
    <string name="done_button">Done</string>
    <string name="user_signout">Sign Out</string>
    <string name="form_product_label">What are you going to send?</string>
    <string name="form_product_hint">A bottle of water</string>
    <string name="form_destination_name_label">Destination (Name)</string>
    <string name="form_destination_name_hint">서울역</string>
    <string name="form_destination_latitude_label">Destination (latitude)</string>
    <string name="form_destination_latitude_hint">37.5530</string>
    <string name="form_destination_longitude_label">Destination (longitude)</string>
    <string name="form_destination_longitude_hint">126.9726</string>
    <string name="form_receiver_phone_label">Receiver Contact Number</string>
    <string name="form_receiver_phone_hint">010-1234-5678</string>
    <string name="form_reward_label">Reward</string>
    <string name="form_reward_hint">2000</string>
    <string name="form_condition1_label">Condition 1</string>
    <string name="form_condition2_label">Condition2</string>
    <string name="form_condition3_label">Condition3</string>
    <string name="form_additional_information_label">Additional Information</string>
    <string name="form_create_button">Create</string>
    <string name="status_on_delivery">On delivery</string>
    <string name="status_complete">Complete</string>
    <string name="status_ask_for_confirm">Ask for confirmation</string>
    <string name="status_confirmed">Confirmed</string>
    <string name="list_item_product">Product</string>
    <string name="list_item_destination_name">Destination Name</string>
    <string name="button_request">Request</string>
    <string name="button_on_duty">On Duty</string>
</resources>