<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="missionFormViewModel"
            type="com.example.agentd.missionform.MissionFormViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".missionform.MissionFormFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/form_label_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/form_product_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/form_input_product"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/form_product_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_product"
                    app:layout_constraintStart_toStartOf="@+id/form_label_product"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_product" />

                <TextView
                    android:id="@+id/form_label_destination_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_destination_name_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_product"
                    app:layout_constraintStart_toStartOf="@+id/form_input_product"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_product" />

                <EditText
                    android:id="@+id/form_input_destination_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/form_destination_name_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_destination_name"
                    app:layout_constraintStart_toStartOf="@+id/form_label_destination_name"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_destination_name" />

                <TextView
                    android:id="@+id/form_label_destination_latitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_destination_latitude_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_destination_name"
                    app:layout_constraintStart_toStartOf="@+id/form_input_destination_name"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_destination_name" />

                <EditText
                    android:id="@+id/form_input_destination_latitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/form_destination_latitude_hint"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_destination_latitude"
                    app:layout_constraintStart_toStartOf="@+id/form_label_destination_latitude"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_destination_latitude" />

                <TextView
                    android:id="@+id/form_label_destination_longitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_destination_longitude_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_destination_latitude"
                    app:layout_constraintStart_toStartOf="@+id/form_input_destination_latitude"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_destination_latitude" />

                <EditText
                    android:id="@+id/form_input_destination_longitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/form_destination_longitude_hint"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_destination_longitude"
                    app:layout_constraintStart_toStartOf="@+id/form_label_destination_longitude"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_destination_longitude" />

                <TextView
                    android:id="@+id/form_label_receiver_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_receiver_phone_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_destination_longitude"
                    app:layout_constraintStart_toStartOf="@+id/form_input_destination_longitude"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_destination_longitude" />

                <EditText
                    android:id="@+id/form_input_receiver_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/form_receiver_phone_hint"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_receiver_phone"
                    app:layout_constraintStart_toStartOf="@+id/form_label_receiver_phone"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_receiver_phone" />

                <TextView
                    android:id="@+id/form_label_reward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_reward_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_receiver_phone"
                    app:layout_constraintStart_toStartOf="@+id/form_input_receiver_phone"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_receiver_phone" />

                <EditText
                    android:id="@+id/form_input_reward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/form_reward_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_reward"
                    app:layout_constraintStart_toStartOf="@+id/form_label_reward"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_reward" />

                <TextView
                    android:id="@+id/form_label_condition1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_condition1_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_reward"
                    app:layout_constraintStart_toStartOf="@+id/form_input_reward"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_reward" />

                <EditText
                    android:id="@+id/form_input_condition1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_condition1"
                    app:layout_constraintStart_toStartOf="@+id/form_label_condition1"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_condition1" />

                <TextView
                    android:id="@+id/form_label_condition2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_condition2_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_condition1"
                    app:layout_constraintStart_toStartOf="@+id/form_input_condition1"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_condition1" />

                <EditText
                    android:id="@+id/form_input_condition2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_condition2"
                    app:layout_constraintStart_toStartOf="@+id/form_label_condition2"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_condition2" />

                <TextView
                    android:id="@+id/form_label_condition3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_condition3_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_condition2"
                    app:layout_constraintStart_toStartOf="@+id/form_input_condition2"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_condition2" />

                <EditText
                    android:id="@+id/form_input_condition3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_condition3"
                    app:layout_constraintStart_toStartOf="@+id/form_label_condition3"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_condition3" />

                <TextView
                    android:id="@+id/form_label_additional_information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/form_additional_information_label"
                    style="@style/TextStyleTitle1"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_condition3"
                    app:layout_constraintStart_toStartOf="@+id/form_input_condition3"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_condition3" />

                <EditText
                    android:id="@+id/form_input_additional_information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_label_additional_information"
                    app:layout_constraintStart_toStartOf="@+id/form_label_additional_information"
                    app:layout_constraintTop_toBottomOf="@+id/form_label_additional_information" />

                <Button
                    android:id="@+id/form_button_create"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:onClick="@{() -> missionFormViewModel.onCreateMission()}"
                    android:text="@string/form_create_button"
                    style="@style/TextStyleSmall"
                    app:layout_constraintEnd_toEndOf="@+id/form_input_additional_information"
                    app:layout_constraintStart_toStartOf="@+id/form_input_additional_information"
                    app:layout_constraintTop_toBottomOf="@+id/form_input_additional_information" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>