<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signinViewModel"
            type="com.example.agentd.signin.SigninViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        tools:context=".signin.SigninFragment">


        <EditText
            android:id="@+id/signin_input_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_edittext"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/input_text_padding"
            android:paddingRight="@dimen/input_text_padding"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <EditText
            android:id="@+id/signin_input_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_text_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_edittext"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/input_text_padding"
            android:paddingRight="@dimen/input_text_padding"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="@+id/signin_input_email"
            app:layout_constraintStart_toStartOf="@+id/signin_input_email"
            app:layout_constraintTop_toBottomOf="@+id/signin_input_email" />

        <Button
            android:id="@+id/signin_button_signin"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_text_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_button"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold"
            android:onClick="@{() -> signinViewModel.onSignin()}"
            app:layout_constraintEnd_toEndOf="@+id/signin_input_password"
            app:layout_constraintStart_toStartOf="@+id/signin_input_password"
            app:layout_constraintTop_toBottomOf="@+id/signin_input_password" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_signin_to_signup"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="@{() -> signinViewModel.onDoesntHaveAccount()}"
            app:layout_constraintEnd_toEndOf="@+id/signin_button_signin"
            app:layout_constraintStart_toStartOf="@+id/signin_button_signin"
            app:layout_constraintTop_toBottomOf="@+id/signin_button_signin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>