<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="titleViewModel"
            type="com.example.agentd.title.TitleViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".title.TitleFragment">

        <FrameLayout
            android:id="@+id/map_fragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            style="?attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_user"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> titleViewModel.onNavtigateToUser()}"
                android:background="@android:color/background_dark"
                android:text="@string/title_to_user"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/button_mission_form"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/background_dark"
                android:text="@string/title_to_form"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/button_mission_detail"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/background_dark"
                android:text="@string/title_to_detail"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

